--- a/service/service-order/pom.xml
+++ b/service/service-order/pom.xml
@@ -18,8 +18,17 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.xuxiaolei</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
